# game-of-life

./: Cargo.toml  README.md  compute.frag  display.frag  display.vert
src/: cpu.rs  display.rs  gpu.rs  main.rs  term.rs
