[package]
name = "game-of-life"
version = "0.1.0"
authors = ["Axel Montini <axel.montini@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = { version = "0.19", optional = true }
rand = "0.8"
rayon = "1.5"
glium = { version = "0.29", optional = true }
glutin = { version = "0.26", optional = true }
cgmath = {version = "0.18.0", optional = true }

[features]
default = ["window"]
window = ["glium", "glutin", "cgmath"]
term = ["crossterm"]